# bowerbot-skill-sketchfab

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  renovate.json
.github/: dependabot.yml
.github/workflows/: branch-check.yml  ci.yml  release-please.yml
src/bowerbot_skill_sketchfab/: SKILL.md  __init__.py  skill.py
src/bowerbot_skill_sketchfab/schemas/: __init__.py  models.py
src/bowerbot_skill_sketchfab/services/: __init__.py  download_service.py  search_service.py
src/bowerbot_skill_sketchfab/tools/: __init__.py  tools.py
src/bowerbot_skill_sketchfab/utils/: __init__.py  api_utils.py
tests/: test_skill_contract.py
