[project]
name = "bowerbot-skill-sketchfab"
version = "0.0.0"
description = "BowerBot skill that searches and downloads from the user's Sketchfab account"
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
authors = [
    { name = "Arturo Morales Rangel", email = "arangel@binarycore.us" },
]
keywords = ["bowerbot", "bowerbot-skill", "sketchfab", "usd", "openusd", "3d"]

dependencies = [
    # Tighten to bowerbot>=1.5,<2 once 1.5.0 is published to PyPI.
    # Develop locally with: uv pip install -e ../bowerbot
    "bowerbot",
    "httpx>=0.27",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[project.entry-points."bowerbot.skills"]
sketchfab = "bowerbot_skill_sketchfab.skill:SketchfabSkill"

[project.urls]
Homepage = "https://github.com/binary-core-llc/bowerbot-skill-sketchfab"
Issues = "https://github.com/binary-core-llc/bowerbot-skill-sketchfab/issues"
"BowerBot core" = "https://github.com/binary-core-llc/bowerbot"

[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"

# Local development: resolve bowerbot from a sibling checkout instead of
# PyPI. This block is uv-specific and ignored by pip / other resolvers.
# Remove (or override in a private workspace) once bowerbot is on PyPI.
[tool.uv.sources]
bowerbot = { path = "../bowerbot", editable = true }

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
