[project]
name = "bowerbot-skill-sketchfab"
version = "0.1.1"
description = "BowerBot skill that searches and downloads from the user's Sketchfab account"
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
authors = [
    { name = "Arturo Morales Rangel", email = "arangel@binarycore.us" },
]
keywords = ["bowerbot", "bowerbot-skill", "sketchfab", "usd", "openusd", "3d"]

dependencies = [
    # Upper bounds pinned to the next untested major. When upstream
    # ships a new major, we test deliberately and bump the bound in
    # a follow-up release. End users are protected from accidentally
    # picking up breaking changes via `pip install bowerbot-skill-sketchfab`.
    "bowerbot>=1.5,<2",
    "httpx>=0.27,<1",
    "pydantic>=2.0,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<10",
    "pytest-asyncio>=0.23,<2",
    "ruff>=0.4,<1",
]

[project.entry-points."bowerbot.skills"]
sketchfab = "bowerbot_skill_sketchfab.skill:SketchfabSkill"

[project.urls]
Homepage = "https://github.com/binary-core-llc/bowerbot-skill-sketchfab"
Issues = "https://github.com/binary-core-llc/bowerbot-skill-sketchfab/issues"
"BowerBot core" = "https://github.com/binary-core-llc/bowerbot"

[build-system]
requires = ["uv_build>=0.10.4,<0.12.0"]
build-backend = "uv_build"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint.isort]
known-first-party = ["bowerbot_skill_sketchfab"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
